# api-mock-responses

./: Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  start.sh
static/css/: custom.css
templates/: admin.html  test.html
